--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         Maisto kalorijos
                       </button>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Tikrinti</a>
+                        <a class="dropdown-item" href="/tikrinti_maista">Tikrinti</a>
                         <a class="dropdown-item" href="/maistas_prideti">Prideti</a>
                       </div>
                     </div>
