--- a/templates/maistas_prideti.html
+++ b/templates/maistas_prideti.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Prideti produkta 100g matavime</h2>
+<h2>Pridėti produktą 100g matavime</h2>
 <form action="{{ url_for('maistas_prideti') }}", method="post">
     {{ form.hidden_tag() }}
   <div class="form-group">
