--- a/templates/patikrintas_maistas.html
+++ b/templates/patikrintas_maistas.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Produktas sąraše yra! Patikrinkite sąraše </h2>
+<h2>Patikrinta </h2>
 
 
 {% endblock %}
