--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,12 @@
                         Pratimai
                       </button>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#"></a>
-                        <a class="dropdown-item" href="#">Kojoms</a>
-                        <a class="dropdown-item" href="#">Nugarai</a>
-                        <a class="dropdown-item" href="#">Pilvo presui</a>
-                        <a class="dropdown-item" href="#">Rankoms</a>
-                        <a class="dropdown-item" href="#">Pečiams</a>
-                        <a class="dropdown-item" href="#">Krūtinei</a>
+                        <a class="dropdown-item" href="/kojoms">Kojoms</a>
+                        <a class="dropdown-item" href="/nugarai">Nugarai</a>
+                        <a class="dropdown-item" href="/presui">Pilvo presui</a>
+                        <a class="dropdown-item" href="/rankoms">Rankoms</a>
+                        <a class="dropdown-item" href="/peciams">Pečiams</a>
+                        <a class="dropdown-item" href="/krutinei">Krūtinei</a>
                       </div>
                     </div>
                     <div class="btn-group">
@@ -58,8 +57,8 @@
                         Skaičiuoklė
                       </button>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Kūno masės indeksas</a>
-                        <a class="dropdown-item" href="#">Dienos kalorijų norma</a>
+                        <a class="dropdown-item" href="/kuno_mases_indeksas">Kūno masės indeksas</a>
+                        <a class="dropdown-item" href="/dienos_kaloriju_norma">Dienos kalorijų norma</a>
                       </div>
                     </div>
                     <li class="nav-item">
