--- a/templates/tikrinti_maista.html
+++ b/templates/tikrinti_maista.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method='post' action="{{ url_for('tikrinti_maista') }}">
     {{ form.hidden_tag() }}
-  <h2>Tikrinti produktu maistingumą </h2>
+  <h2>Tikrinti produktų maistingumą </h2>
   <div class="input-group">
     {{ form.ieskoti(class="form-control rounded") }}
     {{ form.tikrinti(class="btn btn-outline-primary") }}
