--- a/templates/dienos_kaloriju_norma.html
+++ b/templates/dienos_kaloriju_norma.html
@@ -7,7 +7,7 @@
     <div class="form-row">
       <div class="form-group col-md-4">
           {{ form.svoris.label(class="form-control-label") }}
-        {{ form.svoris(class="form-control", placeholder="Ūgis cm pvz: 180") }}
+        {{ form.svoris(class="form-control", placeholder="Ūgis cm pvz: 180...") }}
       </div>
       <div class="form-group col-md-4">
         {{ form.ugis.label(class="form-control-label") }}
