--- a/templates/kojoms.html
+++ b/templates/kojoms.html
@@ -15,9 +15,10 @@
 <p>Kojų pratimai, dėl itin didelio raumenyno, dažnai yra skirstomi į mankštas priekinei, galinei ir vidurinei raumenų daliai, kad būtų tolygus visų dalių ištreniravimas.
 </p>
 <h4>Pratimai</h4>
-<img src="/static/kojoms/kojoms.jpg" alt="" width="400" height="310" style="display: block;">
-<img src="/static/kojoms/kojoms1.jpg" alt="" width="400" height="220" style="display: block;">
-<img src="/static/kojoms/kojoms2.png" alt="" width="500" height="310" style="display: block;">
+<img src="/static/kojoms/kojoms.jpg" alt="" width="400" height="310" style="display: block; padding: 15px;">
+<img src="/static/kojoms/kojoms1.jpg" alt="" width="400" height="220" style="display: block; padding: 15px;">
+<img src="/static/kojoms/kojoms2.png" alt="" width="500" height="310" style="display: block; padding: 15px;">
+
 
 {% endblock %}
 
