--- a/templates/presui.html
+++ b/templates/presui.html
@@ -13,8 +13,8 @@
 </p>
 <p>Taip pat turėsite geresnį balansą bei koordinaciją.</p>
 <h4>Pratimai</h4>
-<img src="/static/presui/presui.jpg" alt="" width="320" height="450" style="display: block;">
-<img src="/static/presui/presui1.png" alt="" width="500" height="200" style="display: block;">
-<img src="/static/presui/presui2.jpg" alt="" width="500" height="310" style="display: block;">
+<img src="/static/presui/presui.jpg" alt="" width="320" height="450" style="display: block; padding: 15px;">
+<img src="/static/presui/presui1.png" alt="" width="500" height="200" style="display: block; padding: 15px;">
+<img src="/static/presui/presui2.jpg" alt="" width="500" height="310" style="display: block; padding: 15px;">
 \
 {% endblock %}
