--- a/templates/rankoms.html
+++ b/templates/rankoms.html
@@ -16,10 +16,10 @@
 <p>Pratimai su pasipriešinimo guma, štanga ar su hanteliais, suteiks galimybę pilnai atlikti kokybišką ir efektyvią rankų treniruotę namuose ar sporto salėje.
 </p>
 <h4>Pratimai</h4>
-<img src="/static/rankoms/rankoms.png" alt="" width="500" height="310" style="display: block;">
-<img src="/static/rankoms/rankoms1.png" alt="" width="500" height="310" style="display: block;">
-<img src="/static/rankoms/rankoms2.jpg" alt="" width="500" height="310" style="display: block;">
-<img src="/static/rankoms/rankoms3.jpg" alt="" width="600" height="310" style="display: block;">
+<img src="/static/rankoms/rankoms.png" alt="" width="500" height="310" style="display: block; padding: 15px;">
+<img src="/static/rankoms/rankoms1.png" alt="" width="500" height="310" style="display: block; padding: 15px;">
+<img src="/static/rankoms/rankoms2.jpg" alt="" width="500" height="310" style="display: block; padding: 15px;">
+<img src="/static/rankoms/rankoms3.jpg" alt="" width="600" height="310" style="display: block; padding: 15px;">
 
 
 {% endblock %}
