--- a/templates/peciams.html
+++ b/templates/peciams.html
@@ -14,9 +14,9 @@
 <p>Būtent tokie figūros tipai nuo senovės laikų (prisiminkite visas antikines skulptūras, kurias esate matę), iki pat šių dienų yra laikomas grožio etalonu, kuris pastaraisiais metais ne blėsta, o vis stiprėja.
 </p>
 <h4>Pratimai</h4>
-<img src="/static/peciams/peciams.jpg" alt="" width="400" height="310" style="display: block;">
-<img src="/static/peciams/peciams1.png" alt="" width="370" height="310" style="display: block;">
-<img src="/static/peciams/peciams2.jpg" alt="" width="400" height="250" style="display: block;">
+<img src="/static/peciams/peciams.jpg" alt="" width="400" height="310" style="display: block; padding: 15px;">
+<img src="/static/peciams/peciams1.png" alt="" width="370" height="310" style="display: block; padding: 15px;">
+<img src="/static/peciams/peciams2.jpg" alt="" width="400" height="250" style="display: block; padding: 15px;">
 
 
 {% endblock %}
