--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     width: 1070px;
     margin: 20px;
     font-family: Arial, Helvetica, sans-serif">
-    <div class="bg-image" style="background-image: url({{ url_for('static',filename = '/index/pagrindine1.jpg')}});
+    <div class="bg-image" style="background-image: url({{ url_for('static',filename = '/photos/index/pagrindine1.jpg')}});
       filter: blur(6px);
       -webkit-filter: blur(6px);
       height: 100%;
