--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-info static-top">
         <div class="container">
-            <a class="navbar-brand" href="/" ><img src="/static/base/logo.png" alt="HTML tutorial" style="width: 190px"></a>
+            <a class="navbar-brand" href="/" ><img src="/static/photos/base/logo.png" alt="HTML tutorial" style="width: 190px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,9 +61,18 @@
                         <a class="dropdown-item" href="/dienos_kaloriju_norma">Dienos kalorijų norma</a>
                       </div>
                     </div>
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Apie</a>
+                        <a class="nav-link" href="/irasai">Įrašai</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/atsijungti">Atsijungti</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/prisijungti">Prisijungti</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -72,10 +81,20 @@
     <!-- Page Content -->
 
     <body>
-         <div class="container">
-             {% block content %}
-             {% endblock %}
-         </div>
+        <div class="container">
+            <br>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
 
 
