--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,20 @@
                     <!-- Example single danger button -->
                     <div class="btn-group">
                       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Straipsniai
+                      </button>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/straipsniai_mityba">Mityba</a>
+                        <a class="dropdown-item" href="/straipsniai_sportas">Sportas</a>
+                        <a class="dropdown-item" href="/straipsniai_sveikata">Sveikata</a>
+                         {% if current_user.is_authenticated %}
+                        <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/prideti_straipsni">Prideti straipsnį</a>
+                          {% endif %}
+                      </div>
+                    </div>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Maisto kalorijos
                       </button>
                       <div class="dropdown-menu">
@@ -62,9 +76,6 @@
                       </div>
                     </div>
                     {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/irasai">Įrašai</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/atsijungti">Atsijungti</a>
                     </li>
