--- a/templates/dienos_kaloriju_norma.html
+++ b/templates/dienos_kaloriju_norma.html
@@ -28,9 +28,9 @@
   </div>
     {{ form.skaiciuoti(class="btn btn-primary") }}
     {% if rezultatas %}
-    <h2>Kalorijos metant svorį: {{ rezultatas[0] }} </h2>
-    <h2>Kalorijos palaikant svorį: {{ rezultatas[1] }} </h2>
-    <h2>Kalorijos auginant svorį: {{ rezultatas[2] }} </h2>
+    <h2 style="padding: 10px">Kalorijos metant svorį: {{ rezultatas[0] }} </h2>
+    <h2 style="padding: 9px">Kalorijos palaikant svorį: {{ rezultatas[1] }} </h2>
+    <h2 style="padding: 10px">Kalorijos auginant svorį: {{ rezultatas[2] }} </h2>
     {% endif %}
 </form>
 
