--- a/templates/tikrinti_maista.html
+++ b/templates/tikrinti_maista.html
@@ -15,10 +15,10 @@
     </div>
   </div>
       {{ form.tikrinti(class="btn btn-primary") }}
-  <table class="table">
+  <table class="table" style="margin: 5px">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">Nr.</th>
       <th scope="col">Pavadinimas</th>
       <th scope="col">Svoris(gramais)</th>
       <th scope="col">Kalorijos(kcal)</th>
