--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                     </div>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Iššūkis</a>
+                        <a class="nav-link active" href="/issukis">Iššūkis!</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/atsijungti">Atsijungti</a>
