--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,9 @@
                         <a class="nav-link active" href="/issukis">Iššūkis!</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="/paskyra">Paskyra</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/atsijungti">Atsijungti</a>
                     </li>
                     {% else %}
