--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="bg-image" style="background-image: url({{ url_for('static',filename = '/photos/index/pagrindine1.jpg')}});
       filter: blur(6px);
       -webkit-filter: blur(6px);
-      height: 100%;
+      height: 600px;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;">></div>
