--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
                          {% if current_user.is_authenticated %}
                         <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/prideti_straipsni">Prideti straipsnį</a>
+                            <a class="dropdown-item" href="/mano_straipsniai">Mano straipsniai</a>
                           {% endif %}
                       </div>
                     </div>
